2004-01-15  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/autoplug/gstspideridentity.c:
	(gst_spider_identity_sink_loop_type_finding):
	  break infinite loop by just returning instead of looping
	* gst/gstclock.c: (gst_clock_class_init), (gst_clock_set_property):
	  set event time difference correctly. Set it to 1 second instead
	  of 100ms to be more tolerant
	* gst/gstelement.c: (gst_element_set_time):
	  add debugging output

2004-01-14  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstqueue.c: (gst_queue_getcaps), (gst_queue_link):
	  query if buffers are inside the pool, ignore events

2004-01-13  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstclock.c: (gst_clock_class_init), (gst_clock_init),
	(gst_clock_set_speed), (gst_clock_set_active),
	(gst_clock_is_active), (gst_clock_reset),
	(gst_clock_handle_discont):
	* gst/gstclock.h:
	  deprecate old interface and disable functions that aren't in use
	  anymore.
	* gst/gstelement.h:
	* gst/gstelement.c: (gst_element_get_time), (gst_element_wait),
	(gst_element_set_time), (gst_element_adjust_time):
	  add concept of "element time" and functions to get/set this time.
	* gst/gstelement.c: (gst_element_change_state):
	  update element time correctly.
	* gst/gstelement.c: (gst_element_get_compatible_pad_filtered):
	  This is a debug message, not a g_critical.
	* gst/gstpad.c: (gst_pad_event_default):
	  handle discontinuous events right with element time.
	* gst/gstscheduler.c: (gst_scheduler_state_transition):
	  update to clocking fixes.
	  set clocks on elements in READY=>PAUSED. The old behaviour caused
	  a wrong element time on the first element that started playing.
	* gst/schedulers/gstbasicscheduler.c:
	(gst_basic_scheduler_class_init):
	* gst/schedulers/gstoptimalscheduler.c:
	(gst_opt_scheduler_class_init):
	  remove code that just implements the default behaviour.
	* gst/elements/gstfakesink.c: (gst_fakesink_chain):
	  update to use new clocking functions