@@ -1,5 +1,13 @@
 2004-01-15  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
+	* gst/gstpad.c: (gst_pad_is_linked):
+	* gst/gstpad.h:
+	  implement gst_pad_is_linked
+	* gst/gstelement.h:
+	  reserve space for initiate_state_change
+
+2004-01-15  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
 	* gst/autoplug/gstspideridentity.c:
 	(gst_spider_identity_sink_loop_type_finding):
 	  break infinite loop by just returning instead of looping
